Prefinal style polish fixed issue with header on mobile devices

--- a/src/assets/card.css
+++ b/src/assets/card.css
@@ -89,7 +89,7 @@
     color: #27AE60;
 }
 
-@media screen and (max-width: 648px) {
+@media screen and (max-width: 768px) {
     .item-card {
         width: 100%;
     }    
